--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "dom": "0.0.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-scripts": "2.1.8"
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^4.0.0",
+    "router": "^1.3.5"
   },
   "scripts": {
     "start": "react-scripts start",
