--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
+  "homepage": "https://kilof1.github.io/App-rr/.",
   "name": "spa2",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "dom": "0.0.3",
+    "gh-pages": "^3.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
@@ -11,6 +13,8 @@
     "router": "^1.3.5"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
